--- a/main.tex
+++ b/main.tex
@@ -1084,14 +1084,14 @@ Here $\chi \colon \multiplicativegroup{\finiteFieldExtension{m}} \to \multiplica
 Suppose that $(\algebraicGroup{T},\theta)$ and $(\algebraicGroup{T}',\theta')$ are geometrically conjugate torus character pairs in $G$. Then $g_{\algebraicGroup{T},\rho}(\chi,\theta,\psi) = g_{\algebraicGroup{T}',\rho}(\chi,\theta',\psi)$.
 \end{corollary}
 \begin{proof}
-Both are equal to $g_{(\rho(s_{T,\theta}))}(\psi,\chi) = g_{(\rho(s_{T',\theta'}))}(\psi,\chi)$.
+Both are equal to $$g_{(\rho(s_{T,\theta}))}\left(\chi, \fieldCharacter\right) = g_{(\rho(s_{T',\theta'}))}\left(\chi, \fieldCharacter\right).$$
 \end{proof}
 
 \begin{remark}
-	The above work is not surpising as it is really a rephrasing that the eigenvalues of $\rho(s)$ are independent of conjugacy.
+	The above work is not surprising as it is really a rephrasing that the eigenvalues of $\rho(s)$ are independent of conjugacy.
 \end{remark}
 
-The idea behind the proof of \Cref{lem:indep_geo_conj} is that the formula from \Cref{thm:computation-of-doubling-gauss-sum-scalar-for-deligne-lusztig-characters} relates $\dblVirtualJacobiSumScalar{\RTGTheta{T_H}{H}{\theta_H}}{\chi}/\RTGTheta{T_H}{H}{\theta_H}\left(1\right)$ to $g_{T,\rho}(\chi,\theta,\psi)$ for the appropriate \calvin{doubling representation} $\rho$ in the table below. 
+The idea behind the proof of \Cref{lem:indep_geo_conj} is that the formula from \Cref{thm:computation-of-doubling-gauss-sum-scalar-for-deligne-lusztig-characters} relates $\dblVirtualJacobiSumScalar{\RTGTheta{T_H}{H}{\theta_H}}{\chi}/\RTGTheta{T_H}{H}{\theta_H}\left(1\right)$ to $g_{T,\rho}(\chi,\theta,\psi)$ for the appropriate standard representation $\rho$ in the table below. 
 
 \begin{center}
 	\begin{tabular}{|c|c|} \hline
