--- a/main.tex
+++ b/main.tex
@@ -178,6 +178,7 @@
 \newcommand{\RTTheta}[2]{R_{#1, #2}}
 \newcommand{\RTGTheta}[3]{R_{#1}^{#2}(#3)}
 \newcommand{\RTThetaVirtual}[3]{\mathcal{R}_{#1}^{#2}(#3)}
+\newcommand{\Cocharacter}{\mathrm{cochar}}
 
 \newcommand{\calvin}[1]{\textcolor{orange}{\sffamily ((CALVIN: #1))}}
 \newcommand{\elad}[1]{\textcolor{blue}{\sffamily ((ELAD: #1))}}
@@ -1154,18 +1155,19 @@ x_0 & 0 & 0 & 0 & \hdots & 0 \\
 \begin{proof}
 Recall that $x_{T,\theta}$ is defined by for sufficiently large $m$ with $\zeta_m = 1/(q^m-1)$ under the fixed identification $\multiplicativegroup{\algebraicClosure{\finiteField}} \cong (\mathbb{Q}/\mathbb{Z})_{p'}$
 \[
-    \exp(\langle x_{T,\theta},y\rangle) = \theta((N_{T(\finiteField_m):T(\finiteField)}(y(\zeta_m))).
+    \exp\left(\innerproduct{x_{T,\theta}}{y}\right) = \theta\left(\aFieldNorm_{\algebraicGroup{T}(\finiteField_m):\algebraicGroup{T}(\finiteField)}\left(y(\zeta_m\right)\right).
 \]
+In the following computations, we will choose $m$ to be sufficiently large so such that the torus $\algebraicGroup{T}\left(\finiteField_m\right)$ is isomorphic to $\left(\multiplicativegroup{\finiteFieldExtension{m}}\right)^N$. We will then identify the cocharacter lattice $\CocharacterLattice{\algebraicGroup{T}}$ with $\zIntegers^N$ by the map $\Cocharacter \colon \zIntegers^N \to \CocharacterLattice{\algebraicGroup{T}}$ given by $\left(y_1,\dots,y_N\right) \mapsto \left(\Cocharacter_{(y_1,\dots,y_N)}\left(t\right) = \left(t^{y_1},\dots,t^{y_N}\right)\right)$.
 For different tori with Frob action we get
 \begin{enumerate}
-    \item ($n$-cycle) $\algebraicGroup{T}(\finiteField) \cong \finiteField_n^\times$ with $$\FieldNorm{\algebraicGroup{T}(\finiteField_{mn})}{\algebraicGroup{T}(\finiteField)}(y_1,y_2 \hdots y_n)(\zeta_{mn}) = (\zeta_n)^{y_1+qy_2+q^2y_3 \hdots +q^{n-1}y_n}$$
-    \item ($n$-cycle with one negative) $\algebraicGroup{T}(\finiteField) \cong \{x \in \finiteField_{2n}^\times: \FieldNorm{2n}{n}(x) = 1\}$ with $$\FieldNorm{\algebraicGroup{T}(\finiteField_{2mn})}{\algebraicGroup{T}(\finiteField)}(y_1,y_2 \hdots y_n)(\zeta_{2mn}) = (\beta_n)^{y_1+qy_2+q^2y_3 \hdots +q^{n-1}y_n}$$
+    \item (cycle of length $n$) $\algebraicGroup{T}(\finiteField) \cong \finiteField_n^\times$ and $\algebraicGroup{T}\left(\finiteFieldExtension{nm}\right) \cong \left(\multiplicativegroup{\finiteFieldExtension{m}}\right)^n$ with $$\FieldNorm{\algebraicGroup{T}(\finiteField_{mn})}{\algebraicGroup{T}(\finiteField)}\left(\Cocharacter_{(y_1,\dots,y_n)}(\zeta_{mn})\right) = \prod_{i=0}^{n-1} \left(\zeta_n\right)^{q^{i} y_{i+1}}.$$
+    \item (cycle of length $n$ with one negative sign) $\algebraicGroup{T}(\finiteField) \cong \NormOneGroup{2n}$ and $\algebraicGroup{T}\left(\finiteFieldExtension{2mn}\right) \cong \left(\multiplicativegroup{\finiteFieldExtension{2mn}}\right)^{n}$ with $$\FieldNorm{\algebraicGroup{T}(\finiteField_{2mn})}{\algebraicGroup{T}(\finiteField)}\left(\Cocharacter_{(y_1,\dots, y_n)}\left(\zeta_{2mn}\right)\right) = \prod_{i=0}^{n-1}(\beta_n)^{q^{i} y_{i+1}},$$
     where $\beta_n = \zeta_{2n}^{1-q^n}$.
-    \item ($(-1) \cdot n$-cycle, $n$ even) $\algebraicGroup{T}(\finiteField) \cong \finiteField_n^\times$ with $$\FieldNorm{\algebraicGroup{T}(\finiteField_{mn})}{\algebraicGroup{T}(\finiteField)}(y_1,y_2 \hdots y_n)(\zeta_{mn}) = (\zeta_n)^{y_1-qy_2+q^2y_3-q^3y_4 \hdots -q^{n-1}y_n}$$
-    \item ($(-1) \cdot n$-cycle, $n$ odd) $\algebraicGroup{T}(\finiteField) \cong \{x \in \finiteField_{2n}^\times: \FieldNorm{2n}{n}(x) = 1\}$ with $$\FieldNorm{\algebraicGroup{T}(\finiteField_{2mn})}{\algebraicGroup{T}(\finiteField)}(y_1,y_2 \hdots y_n)(\zeta_{2mn}) = (\beta_n)^{y_1-qy_2+q^2y_3-q^3y_4 \hdots +q^{n-1}y_n}$$
+    \item (cycle of length $n$ with $n$ negative signs, $n$ even) $\algebraicGroup{T}(\finiteField) \cong \finiteField_n^\times$ and $\algebraicGroup{T}\left(\finiteFieldExtension{mn}\right) \cong \left(\multiplicativegroup{\finiteFieldExtension{nm}}\right)^n$ with $$\FieldNorm{\algebraicGroup{T}(\finiteField_{mn})}{\algebraicGroup{T}(\finiteField)}\left(\Cocharacter_{(y_1,\dots,y_n)}(\zeta_{mn})\right) = \prod_{i=0}^{n-1} (\zeta_n)^{\left(-1\right)^{i} q^{i} y_{i+1}}.$$
+    \item (cycle of length $n$ with $n$ negative signs, $n$ odd) $\algebraicGroup{T}(\finiteField) \cong \NormOneGroup{2n}$ and $\algebraicGroup{T}\left(\finiteFieldExtension{2mn}\right) \cong \left(\multiplicativegroup{\finiteFieldExtension{2mn}}\right)^{n}$ with $$\FieldNorm{\algebraicGroup{T}(\finiteField_{2mn})}{\algebraicGroup{T}(\finiteField)}\left(\Cocharacter_{(y_1,\dots, y_n)}\left(\zeta_{2mn}\right)\right) = \prod_{i=0}^{n-1} (\beta_n)^{\left(-1\right)^{i}q^{i}y_{i+1}},$$
     where $\beta_n = \zeta_{2n}^{1-q^n}$.
 \end{enumerate}
-Now the results follow from the equalities
+The results now follow from the equalities
 \begin{align*}
 	\alpha(\zeta^{((y_1-y_{2n})+q(y_2-y_{2n-1}) + \hdots +q^{n-1}(y_{n}-y_{n+1}))})&=\alpha(\zeta^{(y_1+qy_2 + \hdots +q^{n-1}y_{n})}) \alpha^{-1}(\zeta^{(y_{2n}+qy_{2n-1} + \hdots +q^{n-1}y_{n+1})}) \\
 	\theta(\beta^{((y_1-y_{2n})+q(y_2-y_{2n-1}) + \hdots +q^{n-1}(y_{n}-y_{n+1}))})&=\theta(\beta^{(y_1+qy_2 + \hdots + q^{n-1}y_{n} + q^ny_{2n}+q^{n+1}y_{2n-1} \hdots +q^{2n-1}y_{n+1})}) \\
