--- a/main.tex
+++ b/main.tex
@@ -1047,7 +1047,7 @@ Torus character pairs for $\restrictionOfScalars{\finiteFieldExtension{m}}{\fini
 %\]
 %\calvin{maybe should do inverses in the definition. Not sure if $\tau$ or $g$ make more sense.}
 
-Given a torus character pair $(\algebraicGroup{T},\theta)$ with associated $\Frobenius$-twisted conjugacy class $(w) \in W(\algebraicGroup{T}_0)$ along with an embedding $\rho:\algebraicGroup{G}^* \to \restrictionOfScalars{\finiteFieldExtension{m}}{\finiteField}{\algebraicGroup{\GL}_N}$ and a Frobenius stable maximal torus $\algebraicGroup{T}^* \subset \restrictionOfScalars{\finiteFieldExtension{m}}{\finiteField}{\algebraicGroup{\GL}_N}$ such that $\rho(\algebraicGroup{T}_0^*) \subset \algebraicGroup{T}^*$, let $\tilde{\algebraicGroup{T}}$ be the torus of $\algebraicGroup{\GL}_N$ \elad{of $\restrictionOfScalars{\finiteFieldExtension{m}}{\finiteField}{\algebraicGroup{\GL}_N}$?} corresponding to the $\Frobenius$-twisted conjugacy class of $\rho(w) \in W(\algebraicGroup{T})$ \elad{of $W\left(\algebraicGroup{T}^{\ast}\right)$? Or maybe $W\left(\restrictionOfScalars{\finiteFieldExtension{m}}{\finiteField}{A_N}\right)$?} and let $\tilde{\theta} \colon \tilde{\algebraicGroup{T}}^{\Frobenius} \to \multiplicativegroup{\cComplex}$ be a character such that $(\rho(s_{\algebraicGroup{T},\theta})) = (s_{\tilde{\algebraicGroup{T}},\tilde{\theta}})$. We define
+Given a torus character pair $(\algebraicGroup{T},\theta)$ with associated $\Frobenius$-twisted conjugacy class $(w) \in W(\algebraicGroup{T}_0)$ along with an embedding $\rho:\algebraicGroup{G}^* \to \restrictionOfScalars{\finiteFieldExtension{m}}{\finiteField}{\algebraicGroup{\GL}_N}$ and a Frobenius stable maximal torus $\algebraicGroup{T}^* \subset \restrictionOfScalars{\finiteFieldExtension{m}}{\finiteField}{\algebraicGroup{\GL}_N}$ such that $\rho(\algebraicGroup{T}_0^*) \subset \algebraicGroup{T}^*$, let $\tilde{\algebraicGroup{T}}$ be the torus of $\algebraicGroup{\GL}_N$ \elad{of $\restrictionOfScalars{\finiteFieldExtension{m}}{\finiteField}{\algebraicGroup{\GL}_N}$?} corresponding to the $\Frobenius$-twisted conjugacy class of $\rho(w) \in W(\algebraicGroup{T})$ \elad{of $W\left(\algebraicGroup{T}^{\ast}\right)$? Or maybe $W\left(\restrictionOfScalars{\finiteFieldExtension{m}}{\finiteField}{\algebraicGroup{A}_N}\right)$?} and let $\tilde{\theta} \colon \tilde{\algebraicGroup{T}}^{\Frobenius} \to \multiplicativegroup{\cComplex}$ be a character such that $(\rho(s_{\algebraicGroup{T},\theta})) = (s_{\tilde{\algebraicGroup{T}},\tilde{\theta}})$. We define
 \[
     g_{\algebraicGroup{T},\rho}(\chi,\theta,\psi) := \tau_{\Tilde{\algebraicGroup{T}}}(\tilde{\theta} \times \chi \circ \det,\psi) = \epsilon_{\Tilde{\algebraicGroup{T}}} q^{-nm/2}\sum_{t \in \tilde{\algebraicGroup{T}}^{\Frobenius}} \tilde{\theta}^{-1}(t)\chi^{-1}({\det}_{\finiteFieldExtension{m}}t) \psi(\trace_{\finiteFieldExtension{m}}t).
 \]
